--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>dukenCRM</title>
 
-    <meta property="og:title" content="supply-flow-dashboard" />
+    <meta property="og:title" content="SupplyFlow — управление поставками и аналитика бизнеса" />
+
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://i.pinimg.com/736x/e5/a2/52/e5a252b0d1ceae9c5a7ee8cea147ce6f.jpg" />
+    <meta property="og:image" content="./logo.png" />
 
   </head>
 
