better SEO and google analytics included

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,13 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>dukenCRM</title>
 
-    <meta property="og:title" content="SupplyFlow — управление поставками и аналитика бизнеса" />
+    <title>dukenCRM — автоматизация поставок и учёта для продуктовых магазинов</title>
 
+    <meta name="description" content="smart-duken — система для автоматизации поставок, учёта поставщиков и финансов в продуктовых магазинах. Аналитика и контроль расходов." />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="smart-duken — управление поставками и аналитика бизнеса" />
+    <meta property="og:description" content="Удобная система для автоматизации поставок, поставщиков и финансов в продуктовых магазинах." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="./logo.png" />
+    <meta property="og:url" content="https://smart-duken.com/" />
 
+
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-92XFBMV27X"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-92XFBMV27X');
+    </script>
   </head>
 
   <body>
