--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,6 +13,16 @@
     <meta property="og:description" content="Удобная система для автоматизации поставок, поставщиков и финансов в продуктовых магазинах." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://smart-duken.com/" />
+    <link rel="manifest" href="/manifest.json" />
+
+    <!-- Android -->
+    <meta name="theme-color" content="#0f172a" />
+
+    <!-- iOS -->
+    <link rel="apple-touch-icon" href="/icons/icon-192.png" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="dukenCRM" />
 
   </head>
 
